@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-10T02:01:19Z",
-  "count_outdated" : 35,
-  "uniques_outdated" : 7,
+  "timestamp" : "2022-06-10T16:34:08Z",
+  "count_outdated" : 36,
+  "uniques_outdated" : 8,
   "count" : 38,
   "uniques" : 9,
   "views" : [
-    {
-      "timestamp": "2022-05-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 2,
